# ansirs

./: .gitignore  Cargo.toml  README.md  renovate.json  rust.code-workspace
.github/workflows/: coverage.yml  rust.yml  rust_nightly.yml
cov/: ansirs-10505001392629476162_0.profraw  ansirs-14269523925865540956_0.profraw  ansirs-17091256678358087637_0.profraw  ansirs-17091399620240504789_0.profraw  ansirs-17091399625609213909_0.profraw  ansirs-17091404026876950485_0.profraw  ansirs-17091551368953362389_0.profraw  ansirs-17091551370027104213_0.profraw  ansirs-17091551373248329685_0.profraw  ansirs-17091551375395813333_0.profraw  ansirs-17091551377543296981_0.profraw  ansirs-17091754815114868693_0.profraw  ansirs-17091895560121513941_0.profraw  ansirs-17091895561195255765_0.profraw  ansirs-17092025383026325461_0.profraw  ansirs-17092170529300707285_0.profraw  ansirs-17092317869229635541_0.profraw  ansirs-17092317870303377365_0.profraw  ansirs-6947265280781445306_0.profraw  ansirs-6947428014946904250_0.profraw  lcov.info
examples/: all_colors.rs  all_colors_256.rs  basic.rs
src/: colors.rs  flags.rs  lib.rs
src/ansi/: .traits.rs.un~  ansi.rs  flags.rs  mod.rs  traits.rs  traits.rs~
src/color/: .color.rs.un~  .colors.rs.un~  .error.rs.un~  color.rs  color.rs~  colors.rs  colors.rs~  colors2.rs  error.rs  error.rs~  mod.rs  traits.rs
src/styled/: mod.rs  str.rs  string.rs
src/styled/string/: compact.rs  lazy.rs  mod.rs  pretty.rs  refstr.rs
tests/: tracing.rs
