[package]
authors = ["Tony B. <tonyb983@gmail.com>", "Eric G."]
description = "Simple (and probably flawed) little library for working with ANSI color codes."
edition = "2021"
license = "MPL-2.0"
name = "ansirs"
repository = "https://www.github.com/tonyb983/ansirs"
version = "0.1.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
pretty_assertions = "1.2.1"

[badges]
maintenance = { status = "passively-maintained" }
