[package]
authors = ["Tony B. <tonyb983@gmail.com>", "Eric G."]
categories = ["command-line-interface"]
description = "Simple (and probably flawed) little library for working with ANSI color codes."
edition = "2021"
keywords = ["ansi", "color", "terminal", "tui", "console", "cli"]
license = "MPL-2.0"
name = "ansirs"
repository = "https://www.github.com/tonyb983/ansirs"
version = "0.1.5"

[dev-dependencies]
pretty_assertions = "1.2.1"

[badges]
maintenance = { status = "passively-maintained" }
