[package]
authors = ["Tony B. <tonyb983@gmail.com>", "Eric G."]
categories = ["command-line-interface"]
description = "Simple (and probably flawed) little library for working with ANSI color codes."
edition = "2021"
keywords = ["ansi", "color", "terminal", "tui", "cli"]
license = "MPL-2.0"
name = "ansirs"
repository = "https://www.github.com/tonyb983/ansirs"
version = "0.1.7"

[features]
default = ["profile"]
profile = ["trace"]
serde = ["dep:serde"]
strings = ["dep:once_cell"]
trace = ["dep:tracing"]

[dependencies]
once_cell = { version = "1.17.0", optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }
string-interner = "0.15.0"
string_cache = "0.8.4"
tracing = { version = "0.1.37", features = ["attributes"], optional = true }


[dev-dependencies]
pretty_assertions = "1.3.0"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "tracing-log"] }

[badges]
maintenance = { status = "passively-maintained" }
